# CANopenTerm

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: cmake.yml  code-review.yml  codeql.yml  continous-deployment.yml  continuous-deployment.yml  linux.yml  msvc.yml  windows.yml
cmake/: FindCANvenient.cmake  FindSDL2.cmake  FindcJSON.cmake  Findinih.cmake  Findisocline.cmake  Findpocketpy.cmake  Lua_devel.cmake  Nuklear_devel.cmake  PCAN_devel.cmake  codb2json.cmake  dep_CANvenient.cmake  dep_dirent.cmake  dep_inih.cmake  dep_lua.cmake  dep_pcan.cmake  dep_sdl3.cmake  dirent_devel.cmake  os_linux.cmake  os_windows.cmake  patch_cmocka.cmake  tests.cmake  unit_tests.cmake
docs/: 404.html  CANvenient.md  CNAME  README.md  _sidebar.md  canvenient.md  codb2json.md  font.css  getting-started.md  index.html  legal-information.md  lua-api.md  origin-and-vision.md  picoc-api.md  python-api.md  report-issue.md  subprojects.md
docs/manpages/: CANopenTerm.1  codb2json.1
export/: .gitignore
export/codb/: codb.schema.json  ds302.json  ds401.json  ds402.json  ds404.json  ds405.json  ds406.json  ds408.json  ds410.json  ds413.json  ds415.json  ds417.json  ds418.json  ds419.json  ds443.json  ds447.json  v417.json
export/lua/: canopen.lua  utils.lua
export/scripts/: bootup_test.lua  chaos.lua  dashboard.lua  device_info.lua  device_scanner.lua  device_type.lua  fuzz.lua  hello.c  hello.lua  hello.py  jxm-hmi.lua  lss.lua  poti.lua  progress.lua  replay.lua  rotary.lua  rp2d.lua  rp2x.lua  scanner.c  scanner.lua  sdo_test.lua  stm32.lua  trace.lua  uds.lua  watch.lua  widget.lua
export/scripts/core/: init.lua
export/scripts/obd2/: init.lua
export/scripts/utils/: init.lua
export/tests/: .gitignore  00_linked_list.c  04_str.py  18_include.c  25_quicksort.c  27_sizeof.c  30_hanoi.c  31_args.c  32_led.c  38_multiple_array_index.c  45_empty_for.c  47_switch_return.c  49_bracket_evaluation.c  50_logical_second_arg.c  51_static.c  54_goto.c  55_array_initializer.c  56_cross_structure.c  57_macro_bug.c  59_break_before_loop.c  61_initializers.c  62_float.c  63_typedef.c  64_double_prefix_op.c  65_typeless.c  66_printf_undefined.c  67_macro_crash.c  68_return.c  77_builtin_func.py  rand0.c  rand1.c  rand10.c  rand100.c  rand101.c  rand102.c  rand103.c  rand104.c  rand105.c  rand106.c  rand107.c  (+102 more)
setup/: setup.sln
setup/CANopenTerm/: CANopenTerm.wixproj  Components.wxs  Folders.wxs  MIT.rtf  Package.en-us.wxl  Package.wxs
setup/CANopenTerm.Package/: Package.appxmanifest
src/: can.c  can.h  codb2json.c  command.c  command.h  config.h  core.c  core.h  dict.c  dict.h  gui.c  gui.h  main.c  menu_bar.c  menu_bar.h  nmt_client.c  nmt_client.h  nuklear_sdl_renderer.h  pdo.c  pdo.h  printf.c  printf.h  renderer.h  scripts.c  scripts.h  sdo_client.c  sdo_client.h  table.c  table.h  unit_tests.c  version.h
src/api/: lua_can.c  lua_can.h  lua_dbc.c  lua_dbc.h  lua_junit.c  lua_junit.h  lua_misc.c  lua_misc.h  lua_nmt.c  lua_nmt.h  lua_pdo.c  lua_pdo.h  lua_sdo.c  lua_sdo.h  lua_test_report.c  lua_test_report.h  lua_widget.c  lua_widget.h  picoc_can.c  picoc_junit.c  picoc_junit.h  picoc_misc.c  picoc_misc.h  picoc_nmt.h  picoc_pdo.c  picoc_sdo.c  picoc_test_report.c  picoc_test_report.h  python_can.c  python_can.h  python_dbc.c  python_dbc.h  python_junit.c  python_junit.h  python_misc.c  python_misc.h  python_nmt.c  python_nmt.h  python_pdo.c  python_pdo.h  (+6 more)
src/codb2json/: codb2json.c  codb2json.h  main.c
src/core/: buffer.c  buffer.h  can.c  can.h  can_linux.c  can_windows.c  codb.c  codb.h  command.c  command.h  common.c  common.h  core.c  core.h  core_linux.c  core_windows.c  ctt.c  ctt.h  dbc.c  dbc.h  dict.c  dict.h  eds.c  eds.h  junit.c  junit.h  library_can.c  library_can.h  nmt.c  nmt.h  nmt_client.c  nmt_client.h  pdo.c  pdo.h  picoc_can.c  picoc_can.h  picoc_dbc.c  picoc_dbc.h  picoc_misc.c  picoc_nmt.c  (+20 more)
src/os/: can_linux.c  can_windows.c  os.c  os.h  os_linux.c  os_linux.h  os_windows.c  os_windows.h  scripts_linux.c  scripts_windows.c
src/picoc/: .gitignore  CMakeLists.txt  debug.c  expression.c  heap.c  interpreter.h  platform.h  table.c
src/picoc/platform/: platform_msvc.c  platform_unix.c
src/tests/: run_unit_tests.c  test_buffer.c  test_buffer.h  test_can.c  test_can.h  test_codb.c  test_codb.h  test_dbc.c  test_dbc.h  test_dict.c  test_dict.h  test_nmt.c  test_nmt.h  test_nmt_client.c  test_nmt_client.h  test_os.c  test_os.h  test_pdo.c  test_pdo.h  test_scripts.c  test_scripts.h  test_sdo.c  test_sdo.h  test_sdo_client.c  test_sdo_client.h  test_table.c  test_table.h  test_test_report.c  test_test_report.h  test_wrapper.c
src/widget/: ascii.c  ascii.h  bargraph.c  bargraph.h  led.c  led.h  palette.h  primitives.c  primitives.h  status_bar.c  status_bar.h  tachometer.c  tachometer.h
yocto/: README.md
yocto/meta-canopenterm/conf/: layer.conf
yocto/meta-canopenterm/recipes-connectivity/: canopenterm_0.5.1.bb
yocto/meta-canopenterm/recipes-connectivity/canopenterm/: canopenterm_0.2.7.bb  canopenterm_0.3.2.bb  canopenterm_0.3.3.bb  canopenterm_0.3.4.bb  canopenterm_0.3.5.bb  canopenterm_0.3.6.bb  canopenterm_0.4.1.bb  canopenterm_0.5.1.bb  canopenterm_0.5.2.bb  canopenterm_0.6.0.bb  canopenterm_0.7.0.bb  canopenterm_0.8.0.bb  canopenterm_1.0.0.bb  canopenterm_1.0.1.bb  canopenterm_1.0.2.bb  canopenterm_1.0.3.bb  canopenterm_1.0.4.bb  canopenterm_1.0.5.bb
yocto/meta-canopenterm/recipes-graphics/libsdl2/: libsdl2_2.30.5.bb
yocto/meta-canopenterm/recipes-support/nuklear/: nuklear_4.9.6.bb
yocto/meta-canopenterm/recipes-support/pcan-basic-api/: pcan-basic-api_4.6.1.bb
